[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Entities/Player/Player_up.png" type="Texture" id=2]
[ext_resource path="res://Entities/Player/Player_walking_up_1.png" type="Texture" id=3]
[ext_resource path="res://Audio/bullet_shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://Entities/Player/Player_down.png" type="Texture" id=5]
[ext_resource path="res://Entities/Player/Player_walking_left_1.png" type="Texture" id=6]
[ext_resource path="res://Entities/HealthBar/HealthDisplay.tscn" type="PackedScene" id=7]
[ext_resource path="res://Entities/Player/Player_left.png" type="Texture" id=8]
[ext_resource path="res://Entities/Player/Player_walking_left_2.png" type="Texture" id=9]
[ext_resource path="res://Entities/Player/Player_walking_down_2.png" type="Texture" id=10]
[ext_resource path="res://Entities/Player/Player_walking_up_2.png" type="Texture" id=11]
[ext_resource path="res://Entities/Player/Player_walking_down_1.png" type="Texture" id=12]
[ext_resource path="res://Title_Screen/title_screen/fonts/montserrat_eb_24_2.tres" type="DynamicFont" id=13]
[ext_resource path="res://Title_Screen/title_screen/fonts/montserrat_eb_24.tres" type="DynamicFont" id=14]
[ext_resource path="res://Entities/Player/Player_hands_up.png" type="Texture" id=15]
[ext_resource path="res://Entities/Player/Player_hands_down.png" type="Texture" id=16]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 74.9351, 202.093 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "stand_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "stand_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "stand_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "move_arms",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 300, 100 )
scale = Vector2( 0.3, 0.3 )
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5, 12.5 )
shape = SubResource( 1 )

[node name="HealthDisplay" parent="." instance=ExtResource( 7 )]
position = Vector2( 6.66663, -226.667 )

[node name="Player" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "stand_down"

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_top = -10300

[node name="RayCast2D" type="RayCast2D" parent="."]
scale = Vector2( 50, 10 )
enabled = true
cast_to = Vector2( 0, 175 )

[node name="BulletCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="BulletThrownSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0

[node name="Win" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -690.0
margin_top = -1000.0
margin_right = 783.0
margin_bottom = -270.0
custom_colors/font_color = Color( 0.835294, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 13 )
text = "YOU WON!
"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Game_Over" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -690.0
margin_top = -1000.0
margin_right = 783.0
margin_bottom = -270.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 14 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}
